--- a/src/main.css
+++ b/src/main.css
@@ -26,7 +26,7 @@ input,select{
 
 
 .urlInput{
-	width:100%;
+	width:400px;
 	margin-right: 5px;
 }
 
@@ -41,11 +41,12 @@ button{
 }
 
 button:hover{
-	background-color: red;
+	background-color: #e91e63;
 }
 
 .top-container{
 	margin-bottom: 50px;
+	flex-wrap: wrap;
 }
 
 .action-container > div{
@@ -121,6 +122,7 @@ a{
 .lds-ring div:nth-child(3) {
   animation-delay: -0.15s;
 }
+
 @keyframes lds-ring {
   0% {
     transform: rotate(0deg);
@@ -130,8 +132,31 @@ a{
   }
 }
 
+.top-container button,select{
+	margin-left: 10px;
+}
 
-@media only screen and (orientation: portrait){
+.download-link{
+	text-align: center;
+}
+
+.seo{
+	visibility: hidden;
+}
+
+.mb0{
+	margin-bottom: 0;
+}
+
+.playIns{
+	font-size: 20px;
+	display: none;
+}
+
+
+
+@media screen and (max-device-aspect-ratio: 1/1), (max-aspect-ratio: 1/1){
+        /*Portrait Mode*/
 	.main-container{
 		flex-direction: column-reverse;
 
@@ -147,11 +172,27 @@ a{
 
 	.urlInput{
 		width: 100%;
+		margin-bottom: 20px;
 	}
 
 	iframe{
 		width: 100%;
 		margin-bottom: 20px;
+	}
+
+	.top-container{
+		justify-content: space-between !important;
+		margin-bottom: 0;
+	}
+
+	.top-container button,.top-container select{
+		font-size: 19px;
+		margin-left: 0;
+		text-transform: none;
+		margin-bottom: 20px;
+	}
+	.playIns{
+		display: block;
 	}
 }
 
