--- a/src/main.css
+++ b/src/main.css
@@ -28,6 +28,7 @@ input,select{
 .urlInput{
 	width:400px;
 	margin-right: 5px;
+	margin-bottom: 10px;
 }
 
 button{
@@ -47,6 +48,7 @@ button:hover{
 .top-container{
 	margin-bottom: 50px;
 	flex-wrap: wrap;
+	align-items: baseline;
 }
 
 .action-container > div{
@@ -63,7 +65,6 @@ button:hover{
 div.error{
 	color:red;
 	font-size: 16px;
-	text-align: right;
 	display: block;
 }
 
@@ -172,7 +173,6 @@ a{
 
 	.urlInput{
 		width: 100%;
-		margin-bottom: 20px;
 	}
 
 	iframe{
@@ -181,6 +181,7 @@ a{
 	}
 
 	.top-container{
+		flex-direction: column;
 		justify-content: space-between !important;
 		margin-bottom: 0;
 	}
@@ -193,6 +194,13 @@ a{
 	}
 	.playIns{
 		display: block;
+	}
+	.input-wrapper{
+		width:calc(100% - 25px);
+	}
+
+	.error{
+		margin-bottom: 10px;
 	}
 }
 
