--- a/src/main.css
+++ b/src/main.css
@@ -154,6 +154,11 @@ a{
 	display: none;
 }
 
+.loader{
+	color:#fff;
+	font-size: 20px;
+}
+
 
 
 @media screen and (max-device-aspect-ratio: 1/1), (max-aspect-ratio: 1/1){
@@ -203,4 +208,6 @@ a{
 		margin-bottom: 10px;
 	}
 }
+
+
 
