--- a/src/main.css
+++ b/src/main.css
@@ -159,6 +159,11 @@ a{
 	font-size: 20px;
 }
 
+iframe#ad{
+	width: 100%;
+	height: 500px;
+}
+
 
 
 @media screen and (max-device-aspect-ratio: 1/1), (max-aspect-ratio: 1/1){
